# aa273-project

./: .gitignore  Dockerfile  README.md  data  docker-compose.base.yml  docker-compose.yml  experiments  pyproject.toml  teehelper.sh
notes/: openvins_initialization_fix.md
notes/openvins_setup/: Dockerfile.rosfree  README.md  ROS1.cmake.patch  docker-compose.yml  euroc_to_files.py  run_from_files.cpp  uzhfpv_to_files.py
notes/openvins_setup/config_flightroom/: estimator_config.yaml  kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml
scripts/: METHODS.md  USAGE.md  analyze_sweep.py  eval_poses.py  eval_poses_experiment.py  extract_latents.py  extract_nbv_latents.py  linear_probe.py  run_sweep.py  saturation_analysis.py  test_da3metric_depth.py
src/goggles/: __init__.py  da3_chunked_predictor.py  da3_metric_pairwise_predictor.py  da3_pairwise_predictor.py  da3_predictor.py  depth_pnp_predictor.py  geometry.py  imu_ekf.py  latent_extractor.py  pose_eval.py  reloc3r_predictor.py  sim3_utils.py  tum_utils.py  visualization.py
sweeps/: 2_sweep.yaml  4_sweep.yaml  example_sweep.csv  example_sweep.md  example_sweep.yaml
